# KCF_YOLO

./: .gitignore  CMakeLists.txt  README.md
img/: video2image_generator.sh
img/chicken_1/: images.txt
img/chicken_3/: images.txt
img/deer_1/: images.txt
img/deer_7/: images.txt
img/zebra_1/: images.txt
include/det/: YOLO11.hpp
include/hungarian_algo/: matrix.h
include/tracking/: TrackedObject.h  TrackerConfig.h  TrackerManager.h
models/: export_onnx.py
src/: main.cpp
src/hungarian_algo/: munkres.cpp
src/tracking/: TrackedObject.cpp  TrackerConfig.cpp  TrackerManager.cpp  fhog.cpp  kcftracker.cpp
